Fix spacing between columns

--- a/app/javascript/app/components/country/country-ndc-overview/country-ndc-overview-styles.scss
+++ b/app/javascript/app/components/country/country-ndc-overview/country-ndc-overview-styles.scss
@@ -40,6 +40,7 @@
   color: $theme-color;
   line-height: $line-height-medium;
   column-count: 1;
+  column-gap: $gutter-padding;
   margin-bottom: 15px;
 
   @media #{$tablet-landscape} {
